--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http:54.234.151.98:9000/</sonar.host.url>
+		<sonar.host.url>3.95.209.140:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -95,13 +95,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Searise Technologies Releases Nexus Repository</name>
-	      <url>http://34.229.57.137:8081/repository/searise-Release/</url>
+	      <url>http://3.80.35.60:8081/repository/searise-Release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Searise Technologies Snapshot Nexus Repository </name>
-	      <url>http://34.229.57.137:8081/repository/searise-snapshot/</url>
+	      <url>http://3.80.35.60:8081/repository/searise-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
